* The "Go To" menu entry has been moved to the "Navigate" menu
* D3DFullscreen changes:
  - toggle hotkey is now disabled by default
  - support for madVR has been removed (it already has exclusive mode)
  - 10-bit RBG output now falls back to 8-bit output if the display does not support it
* Remove D2VSource; it's unmaintained and basically unused
* WebUI: Switched to HTML5 and improved the cross browser support
  (IE8 or newer is needed, other browsers should work fine)
* Updated Armenian, Basque, Czech, French, German, Greek, Japanese, Polish, Romanian,
  Simplified and Traditional Chinese and Slovak translations
* Updated Little CMS to v2.5 (git ad2cb04)
* Updated Unrar to v5.0.0
* Updated MediaInfoLib to v0.7.64
* Updated ZenLib to v0.4.29 r444
* Updated VirtualDub to v1.10.4-test11
! D3DFullscreen fixes:
  - fixed strange focus behavior when always on top is enabled
  - fixed VMR9 D3DFS minimizing when losing focus
  - fixed thumb mouse buttons not working when D3DFS has focus
! Various fixes for better playlist support
! Fixed creation date in file properties always being shown as "Not known"
! Ticket #2109/#2975, Fix the handling of aspect ratio changes when using EVR-CP or
  Sync Renderer with DXVA decoding
! Ticket #2189/#3300, Fix graph objects not being properly released when opening another file while
  Properties or Options window is visible
! Ticket #3304, Fix remembering file position when double-clicking on a playlist item.
  If a position was previously saved, it will be restored unless the file is already playing
! Ticket #3425, Audio Switcher: Fix a crash with audio resampling and channel remapping enabled
! Ticket #3440, Disable the "Explore to" feature when the file isn't local in the Properties dialog
  and the playlist context menu
! Ticket #3455, Hide MediaInfo tab when no information is available
! Ticket #3456, Don't show the progress in the taskbar when no duration is available